--- a/package.json
+++ b/package.json
@@ -5,5 +5,19 @@
   "main": "index.js",
   "repository": "git@github.com:ejeba72/basic-typescript-server-4.git",
   "author": "Emmanuel Eni <eejeba@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node index",
+    "dev": "tsc --watch & nodemon dist/index"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.11",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.3"
+  }
 }
